<?xml version="1.0"?>
<package format="2">
  <name>se2_grid_map_test</name>
  <version>0.0.0</version>
  <description>The se2_grid_map_test package</description>

  <maintainer email="meyerc@student.ethz.ch">Christoph Meyer</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>grid_map_ros</depend>

</package>
